Fix viewport jumping in examples.

--- a/static/styles.css
+++ b/static/styles.css
@@ -68,3 +68,8 @@ main
 {
     background-color: #fff;
 }
+
+.examples
+{
+    cursor: pointer;
+}
